syntax = "proto3";

option csharp_namespace = "Project_HealthChecker.ProtoContracts";

message EmptyRequest {}

message CoreLoadResponse {
    repeated float cores_load = 1;
}

service CpuInfo {
    rpc GetCoreLoad (EmptyRequest) returns (stream CoreLoadResponse);
}

message TotalMemoryResponse {
    uint64 total_memory = 1;
}

service RamInfo {
    rpc GetTotalMemory (EmptyRequest) returns (TotalMemoryResponse);
}